Dynamic paint wetmap flickers #49461

Closed
opened 2016-09-27 03:43:24 +02:00 by Nahuel Belich · 6 comments

System Information
Win 7 X64

Blender Version
Broken: c532695
Worked: 2.77 oficial release

Short description of error
Dynamic paint wet map flickers when has low alpha value
pasted_file

Exact steps for others to reproduce the error
dinamic_paint_flickers .zip
1-un zip (it saves one mb but every bit counts)
2-Alt+a or play
you should see little dots blinking

NOTE: in other test i got some other weird reactions in intersections like pasted_file teste1.blend but in this example im not sure if it is the same problem, i don`t know, i will try to isolate more this second example because in this particular blend, unlike the main simplified reported bug, i got the same behavior in older builds.

**System Information** Win 7 X64 **Blender Version** Broken: c532695 Worked: 2.77 oficial release **Short description of error** Dynamic paint wet map flickers when has low alpha value ![pasted_file](https://archive.blender.org/developer/F368965/pasted_file) **Exact steps for others to reproduce the error** [dinamic_paint_flickers .zip](https://archive.blender.org/developer/F368970/dinamic_paint_flickers_.zip) 1-un zip (it saves one mb but every bit counts) 2-Alt+a or play you should see little dots blinking NOTE: in other test i got some other weird reactions in intersections like ![pasted_file](https://archive.blender.org/developer/F368976/pasted_file) [teste1.blend](https://archive.blender.org/developer/F368979/teste1.blend) but in this example im not sure if it is the same problem, i don`t know, i will try to isolate more this second example because in this particular blend, unlike the main simplified reported bug, i got the same behavior in older builds.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

This is caused by a4a968f. @mont29, mind having a look?

This is caused by a4a968f. @mont29, mind having a look?
Bastien Montagne self-assigned this 2016-09-27 12:13:04 +02:00

This issue was referenced by 54ed22c843

This issue was referenced by 54ed22c8433eaff4278ec9f1deb33976168cd265

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49461
No description provided.